fix homepage highlight layout issue

--- a/src/app/assets/stylesheets/mixins.scss
+++ b/src/app/assets/stylesheets/mixins.scss
@@ -317,6 +317,17 @@ $element-border-radius-small: 3px;
     padding:0;
   }
 
+  .collection-indicator {
+    display: block;
+    float: left;
+    @include font-display;
+    font-weight:600;
+    transition: all .2s;
+    color: black;
+    padding: 7px 12px;
+    @include polygon-background(yellow, bottom, false);
+  }
+
 }
 
 @mixin link-animation {
